--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   
   <main>
-    <p>This is a basic web app integrating HTeeML, CSS, and JavaScript.</p>
+    <p>This is a basic web app integrating HTML, CSS, and JavaScript.</p>
     <button id="actionButton">Click Me!</button>
     <p id="message"></p>
   </main>
